--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@internationalized/date": "^3.5.4",
     "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
