--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "react-zoom-pan-pinch": "^3.4.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
